replace the fixed thread pool with a virtual thread per task executor